{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 4,
  "lineage": "de001f51-813e-224b-9f88-f7c977500ee7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-06T14:41:38.091-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/918417250915/global/firewalls/default-allow-http-terraform",
            "log_config": [],
            "name": "default-allow-http-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/global/networks/default",
            "priority": 1000,
            "project": "918417250915",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/global/firewalls/default-allow-http-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-06T14:41:38.060-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/918417250915/global/firewalls/default-allow-ssh-terraform",
            "log_config": [],
            "name": "default-allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/global/networks/default",
            "priority": 1000,
            "project": "918417250915",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/global/firewalls/default-allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/zones/europe-west1-b/disks/webserver-terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/918417250915/zones/europe-west1-b/instances/webserver-terraform",
            "instance_id": "8628822835407215740",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDE+UZ7lymlQVEW1aPnMInnK9xNyFgo6juMzbzKBp5B+xjKsMSRocH+U1qENec4YFD5Y44shgjR3wQUNyRFa8RuD75JLakITHT9seC+kA6GIJ8rRuAv+7WgEI863667jKIQ11j7bB66DxMjkccQWZfMTXqb96pN8FJGaBBFN1UE0ci2BnSU+RkV221j8Hx0NjHeS+xmwTilAGqMU9IntfXcfPqg/JBkRCuDGeUWs/2t2bZ8DID93EDz1+12l66boxkzhROekRDz+m9u06fq4/8ap8h5bSAnOsCMl9fIieEHaNaqBgGlGt4vQ3kSAJqJ/vnUCDOXeHUQxdcp6rK4Dh3T usuario@usuario\n"
            },
            "metadata_fingerprint": "-hIhCNmDbNg=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install apache2 -y; sudo apt install php7.2-cli -y; echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eTerraform Homework!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "webserver-terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.18.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/global/networks/default",
                "network_ip": "10.132.0.20",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "psychic-fold-309916"
              }
            ],
            "project": "918417250915",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-fold-309916/zones/europe-west1-b/instances/webserver-terraform",
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}